Closed
Bug 200359
Opened 23 years ago
Closed 23 years ago
Importing and exporting bookmarks are broken
Categories
(SeaMonkey :: Bookmarks & History, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: ligda, Assigned: p_ch)
References
Details
(Keywords: regression)
Attachments
(1 file, 2 obsolete files)
|
5.25 KB,
patch
|
benjamin
:
review+
alecf
:
superreview+
asa
:
approval1.4b+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030402 Phoenix/0.5
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030402
Exported bookmarks from 3/31/03 daily build and imported them in the 4/2/03
build in the Bookmark Manager. The action completes without any error messages
but the bookmarks never appear in the list. This worked fine in the 3/31/03 build.
Reproducible: Always
Steps to Reproduce:
1. Create bookmarks in the 3/31/03 build.
2. Export bookmarks from the Bookmark Manager.
3. Install the 4/2/03 build.
4. Import the bookmarks that were exported in step 2 from the Bookmark Manager.
Actual Results:
The bookmarks don't show up and there are no error messages.
Expected Results:
The bookmarks should show up in the Bookmark Manager.
This was using the default theme, originally found using Phoenix but verified in
Mozilla.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030402 Phoenix/0.5
Also receiving this error on the nightly build. Build from 4/1/02 works fine as
I just installed it on another machine last night. Export does not seem to work
either and no error message is given.
Same thing with a bookmarks file created the 03.29.2003.
Impossible to import that file with a 04.03.2003 Mozilla build.
(system running on WinXP)
I've noticed also that nothing happens when trying to create a new bookmarks file.
No error messages, in the both situations.
Comment 3•23 years ago
|
||
*** Bug 200781 has been marked as a duplicate of this bug. ***
Comment 4•23 years ago
|
||
Confirming due to number of comments from different sources.
Keywords: regression
Comment 6•23 years ago
|
||
I am having the exact same problem. I was just about to make the switch to
Mozilla full time and I cannot import my IE bookmarks. I am using Windows XP
and Mozilla 1.4a that was downloaded on the 2nd of April.
Comment 7•23 years ago
|
||
Importing IE bookmarks is a separate issue.
*** Bug 200835 has been marked as a duplicate of this bug. ***
Comment 9•23 years ago
|
||
*** Bug 201722 has been marked as a duplicate of this bug. ***
Comment 10•23 years ago
|
||
Sorry for duplicate bug #201722
When it comes to importing IE favorites, there are other solutions too:
http://bookmarkbridge.sourceforge.net/
When is its integration scheduled?
Comment 11•23 years ago
|
||
*** Bug 201926 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 13•23 years ago
|
||
updating summary, patch will follow
Summary: Importing bookmarks from yesterday's version shows no new bookmarks → Importing and exporting bookmarks are broken
| Assignee | ||
Comment 14•23 years ago
|
||
this bug has regressed after the nsIfile conversion.
The problem is that we sent 'file:///home/blabla' filepaths to NS_NewLocaleFile
Strangely enough, it seems like nsFileSpec do trim 'file://' and
NS_NewLocaleFile doesn't.
Maybe it should?
In the patch, I trim the file path in the callers (bookmarks.js)
I also consolidated and cleaned the export and import methods in the bookmarks
service.
| Assignee | ||
Updated•23 years ago
|
Attachment #121375 -
Flags: superreview?(alecf)
Attachment #121375 -
Flags: review?(bsmedberg)
| Assignee | ||
Comment 15•23 years ago
|
||
Ah, I forgot to mention that the diff are against the phoenix tree. there's no
difference with mozilla's one in that area.
| Assignee | ||
Comment 16•23 years ago
|
||
aheum. forget my last comment.
the file picker output just needed to be converted also to nsIFile.
like the previous patch, everything in nsBookmarksService is cleanup.
Attachment #121375 -
Attachment is obsolete: true
| Assignee | ||
Updated•23 years ago
|
Attachment #121375 -
Flags: superreview?(alecf)
Attachment #121375 -
Flags: review?(bsmedberg)
| Assignee | ||
Comment 17•23 years ago
|
||
I attached a random file. here is the proper one.
Attachment #121379 -
Attachment is obsolete: true
| Assignee | ||
Updated•23 years ago
|
Attachment #121380 -
Flags: superreview?(alecf)
Attachment #121380 -
Flags: review?(bsmedberg)
Comment 18•23 years ago
|
||
Comment on attachment 121380 [details] [diff] [review]
patch v2.0
looks good, r=bsmedberg
Attachment #121380 -
Flags: review?(bsmedberg) → review+
Comment 19•23 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.4b) Gecko/20030419
Import Netscape 4.8 bookmark failed without any message.
Comment 20•23 years ago
|
||
Comment on attachment 121380 [details] [diff] [review]
patch v2.0
sr=alecf
Attachment #121380 -
Flags: superreview?(alecf) → superreview+
| Assignee | ||
Comment 21•23 years ago
|
||
Comment on attachment 121380 [details] [diff] [review]
patch v2.0
request approval for 1.4b.
risk is very low, the two liner patch only affect the broken import and export
commands and the rest is clean up.
(patch already committed in phoenix)
Attachment #121380 -
Flags: approval1.4b?
Comment 22•23 years ago
|
||
Comment on attachment 121380 [details] [diff] [review]
patch v2.0
a=asa (on behalf of drivers) for checkin to 1.4b
Attachment #121380 -
Flags: approval1.4b? → approval1.4b+
| Assignee | ||
Comment 23•23 years ago
|
||
marking fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 24•23 years ago
|
||
Verified in the 2003-04-28-03 Macho and 2003-04-28-04 Win32 build.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•