bug 200359: Importing and exporting bookmarks are broken r=bsmedberg@covad.net sr=alecf a=asa